--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <input
               type="datetime-local"
               data-form-date
+              class="input-date"
               placeholder="YYYY/MM/DD"
             />
             <button type="submit" class="btnCreate" data-form-btn>
